--- a/src/config/basic.yaml
+++ b/src/config/basic.yaml
@@ -1,4 +1,4 @@
-gt_path: ../data/groundtruth_a.xlsx
-dt_raw: ../data/system-a/
+gt_path: /home/junetheriver/code/aiops/data/groundtruth_a.xlsx
+dt_raw: /home/junetheriver/code/aiops/data/system-a/
 seed: 0
 workdir: /home/junetheriver/code/aiops/workdir/system_a
