--- a/src/config/system_a.yaml
+++ b/src/config/system_a.yaml
@@ -2,3 +2,5 @@ gt_path: /home/junetheriver/code/aiops/data/groundtruth_a.xlsx
 dt_raw: /home/junetheriver/code/aiops/data/system-a/
 seed: 0
 workdir: /home/junetheriver/code/aiops/workdir/system_a
+start_time: 1614268800
+time_range: 38880
