--- a/src/config/system_a_stat.yaml
+++ b/src/config/system_a_stat.yaml
@@ -10,7 +10,7 @@ nso: 64
 
 wstart: -2
 window: 10
-tag: "w=(-2,10),c"
-model: Classifier
+tag: "w=(-2,10),stat"
+model: Stat
 show_fail: True
 epoch: 200
