--- a/src/config/system_b_raw.yaml
+++ b/src/config/system_b_raw.yaml
@@ -9,7 +9,7 @@ nso: 64
 
 wstart: -2
 window: 10
-tag: "w=(-2,10),c"
-model: Classifier
+tag: "w=(-2,10),c2"
+model: Classifier2
 show_fail: True
 epoch: 200
